--- a/assets/index.html
+++ b/assets/index.html
@@ -47,12 +47,21 @@
                 receiveChatMessage(msg) {
                     this.messages.push(msg);
                 },
+                receiveChatUsers(msg) {
+                    this.users = msg
+                },
             },
             created() {
                 this.username = prompt('Enter your username:');
                 this.socket.chat = io('http://localhost:3000/chat');
                 this.socket.chat.on('chatToClient', (msg) => {
                     this.receiveChatMessage(msg);
+                });
+                this.socket.chat.on('users', (msg) => {
+                    this.receiveChatUsers(msg);
+                });
+                this.socket.chat.on('connect', (msg) => {
+                    this.socket.chat.emit('login', { sender: this.username });
                 });
             }
         });
